tests/test_files_pa3/errors/SingleValidMainInvalidSignature.ic
class A {

	void main(string[] args) {
	
	}

}

class B {

	static void main() {
	
	}

}